--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -1,11 +1,12 @@
 <div class="container">
   <div class="page-header"></div>
-    <nav class="navbar navbar-default">
+    <nav class="navbar navbar-inverse">
       <div class="container-fluid">
         <div class="navbar-header">
-          <a 
-            class="navbar-brand"
-            style="cursor: pointer;">{{'Github profile lookup' | titlecase}}</a>
+          <a
+            href="https://github.com/AdelMahjoub/ng-github-profile-lookup"
+            target="_blank"
+            class="navbar-brand">{{'Github profile lookup' | titlecase}}</a>
         </div>
 
         <form class="navbar-form navbar-right">
