user not found feedback

--- a/src/app/core/container/container.component.html
+++ b/src/app/core/container/container.component.html
@@ -3,7 +3,8 @@
     <div class="col-xs-12 col-md-8 col-md-offset-2">
       <app-profile 
         [profile]="profile"
-        [repos]="repos"></app-profile>
+        [repos]="repos"
+        [userFound]="found"></app-profile>
     </div>
   </div>
 </div>
